--- a/index.html
+++ b/index.html
@@ -77,14 +77,14 @@ footer a:hover {
     <header>
         <img src="c:\Users\User\OneDrive\Imágenes\20240927_154401.jpg"="c:\Users\User\OneDrive\Imágenes\20240927_154401.jpg">
         <h1>Oscar Dionicio Gonzalez Dominguez</h1>
-        <p> Soy estudiante de Ingeniería Informática con un gran deseo de aprender
-            y mejorar continuamente. Me destaco por mi capacidad para trabajar bien en equipo
-             y establecer buenas relaciones con mis compañeros.</p>
+        <p> </p>
     </header>
     <main>
         <section class="about">
             <h2>Sobre Mí</h2>
-            <p>Descripción breve sobre ti.</p>
+            <p>Soy estudiante de Ingeniería Informática con un gran deseo de aprender
+            y mejorar continuamente. Me destaco por mi capacidad para trabajar bien en equipo
+             y establecer buenas relaciones con mis compañeros..</p>
         </section>
         <section class="experience">
             <h2>Experiencia Laboral</h2>
