--- a/index.html
+++ b/index.html
@@ -84,7 +84,9 @@ footer a:hover {
     <main>
         <section class="about">
             <h2>Sobre Mí</h2>
-            <p>Descripción breve sobre ti.</p>
+            <p>Soy estudiante de Ingeniería Informática con un gran deseo de aprender
+            y mejorar continuamente. Me destaco por mi capacidad para trabajar bien en equipo
+             y establecer buenas relaciones con mis compañeros..</p>
         </section>
         <section class="experience">
             <h2>Experiencia Laboral</h2>
